# boreal

./: .gitignore  LICENSE  README.md  ROADMAP.md  package.json  sst.config.ts  temp.README.md  turbo.json
.cargo/: config.toml
.ci-fixtures/: generate.sh
.github/workflows/: build-test.yml  build.yml  compression-benchmark.yml  release.yml
apps/client/: .releaserc.json  CHANGELOG.md  components.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/client/public/: boreal-map-tiles-style.json
apps/client/scripts/: android-env.sh  download-ffmpeg.sh  fetch-ffmpeg.mjs  fetch-models.mjs  setup-sidecars.mjs
apps/client/src/: index.css  main.tsx  routeTree.gen.ts
apps/client/src-tauri/: .gitignore  Android.cmake  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/client/src-tauri/.cargo/: config.toml
apps/client/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/client/src-tauri/examples/: benchmark.rs
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: cache.rs  crypto.rs  db.rs  exif_extractor.rs  file_filter.rs  image_processing.rs  lib.rs  main.rs  manifest.rs  media_processor.rs  memories.rs  originals_cache.rs  pairing.rs  qr_transfer.rs  storage.rs  tray_manager.rs  upload_manager.rs  vault.rs
apps/client/src-tauri/src/embedding/: download.rs  mod.rs  preprocess.rs  search.rs  text.rs  text_mobile.rs  vision.rs  vision_mobile.rs
apps/client/src/components/: GalleryBottomNav.tsx  TitleBar.tsx
apps/client/src/components/gallery/: AudioPlayer.tsx  MasonryGrid.tsx  PhotoLightbox.tsx  TimelineScrubber.tsx
apps/client/src/components/memories/: BentoMediaGrid.tsx  MediaThumbnail.tsx  MemoryEditor.tsx
apps/client/src/components/setup/: CompleteStep.tsx  ConfigureStep.tsx  ConnectAwsStep.tsx  ImportStep.tsx  PendingRestoresSection.tsx  SetupWizard.tsx  WelcomeStep.tsx
apps/client/src/components/ui/: SegmentedControl.tsx  aurora.tsx  button.tsx  combobox.tsx  dialog.tsx  drawer.tsx  print-portal.tsx  spinner.tsx
apps/client/src/components/upload/: MultipleFileUploader.tsx  UploadItem.tsx  UploadPanel.tsx  UploadStats.tsx  UploadTrigger.tsx
apps/client/src/components/vault/: DeleteVaultDialog.tsx  NetworkShareDialog.tsx  QrScannerDialog.tsx  RecoveryKit.tsx  RenameVaultDialog.tsx  ShareVaultDialog.tsx  VaultCard.tsx
apps/client/src/lib/: aws-config.ts  embeddingService.ts  i18n.ts  pairing.ts  qr-transfer.ts  quotes.ts  utils.ts  vault.ts
apps/client/src/pages/: Gallery.tsx  MapPage.tsx  Memories.tsx  PairingPage.tsx  QrExportPage.tsx  QrScannerPage.tsx  SearchPage.tsx  Setup.tsx  VaultsPage.tsx
apps/client/src/routes/: __root.tsx  gallery.index.tsx  gallery.lazy.tsx  gallery.memories.$id.tsx  gallery.memories.index.tsx  gallery.tsx  import.lazy.tsx  import.tsx  index.lazy.tsx  index.tsx  map.tsx  pairing.lazy.tsx  pairing.tsx  pending-downloads.tsx  qr-export.$vaultId.tsx  scan.lazy.tsx  scan.tsx  search.tsx  setup.lazy.tsx  setup.tsx  vaults.lazy.tsx  vaults.tsx
apps/client/src/stores/: upload_store.ts  vault_store.ts
assets/benchmarking/images/: real_031.avif
concepts/: Architecture.md  Encryption.md  ImageSearch.md  SharedAlbum.md  Vault.md
docs/: CostAnalysis.md  MediaProcessing.md  SharingAndAccessControl.md  StorageArchitecture.md
features/: GeoMap.md  ImageSearch.md
