[package]
name = "boreal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "boreal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = "1.1"
aws-sdk-s3 = "1.17"
rusqlite = { version = "0.31", features = ["bundled"] }
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
ravif = "0.11"
imgref = "1.10"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
tauri-plugin-dialog = "2.4.2"
rgb = { version = "0.8.52", features = ["serde"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-stronghold = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2.3.2"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
hmac = "0.12.1"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
infer = "0.16"
ffmpeg-next = { version = "7", features = ["build"] }
tauri-plugin-shell = "2.3.3"
webp-animation = "0.9"
walkdir = "2.5.0"

