[package]
name = "boreal"
version = "0.1.0"
description = " "
authors = ["you"]
edition = "2021"
default-run = "boreal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "boreal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.1", default-features = false, features = ["rustls"] }
aws-sdk-s3 = { version = "1.17", default-features = false, features = ["rustls"] }
aws-smithy-runtime = { version = "1", features = ["client", "connector-hyper-0-14-x", "tls-rustls"] }
aws-sdk-cloudwatch = { version = "1", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
ravif = "0.11"
imgref = "1.10"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
tauri-plugin-dialog = "2.4.2"
rgb = { version = "0.8.52", features = ["serde"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-stronghold = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2.3.2"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
hmac = "0.12.1"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
infer = "0.16"
tauri-plugin-shell = "2.3.3"
webp = "0.3"
walkdir = "2.5.0"
mime_guess = "2"
mime = "0.3"
tauri-plugin-biometry = "0.2"
argon2 = "0.5"
local-ip-address = "0.6.8"
axum = "0.8.7"
tower-http = "0.6.8"
mdns-sd = "0.11"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
hostname = "0.4"
kamadak-exif = "0.6"
async-trait = "0.1"
futures = "0.3.31"
async-stream = "0.3.6"
bytes = "1.11.0"
aws-smithy-types = "1.3.5"
http-body = "0.4"
http = "0.2"
ur = "0.4"
hkdf = "0.12"
log = "0.4"
tauri-plugin-log = "2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "webpki-tokio", "tls12"] }
webp-animation = "0.9.0"

[dev-dependencies]
